--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,47 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>  
-
-   <h3 style="color:darkgreen; font-style:italic;font-size:2em">{{description}}</h3>
-   <h2 style="background-color:darkgoldenrod;">HI {{name}}</h2>
-   <input [(ngModel)]="name" #ctrl="ngModel" required>
+ 
+   <div class="container">
+    <!--UPLOAD-->
+    <form #f="ngForm" enctype="multipart/form-data" novalidate
+      *ngIf="currentStatus === STATUS_INITIAL || currentStatus === STATUS_SAVING">
+      <h1>Upload files</h1>
+      <div class="dropbox">
+        <input type="file" multiple
+          [name]="uploadFieldName" (change)="filesChange($event.target.name, $event.target.files)" 
+          [disabled]="currentStatus === STATUS_SAVING" accept="pdf/*" #photos>
+        <p *ngIf="currentStatus === STATUS_INITIAL">
+          Drag your file(s) here to begin<br>
+          or click to browse
+        </p>
+        <p *ngIf="currentStatus === STATUS_SAVING">
+          Uploading {{ photos.files.length }} files... 
+        </p>
+      </div>
+    </form>
+    <!--SUCCESS-->
+    <div class="margin-20">
+      
+      <pre>{{ uploadedFiles.id}}</pre>
+      <p>
+        <a href="javascript:void(0)" (click)="reset()">Upload again</a>
+      </p>
+      <ul class="list-unstyled">
+        <li *ngFor="let item of uploadedFiles">
+          <img [src]="item.url" class="img-responsive img-thumbnail" 
+            [alt]="item.originalName">
+        </li>
+      </ul>
+    </div>
+    <!--FAILED-->
+    <div class="margin-20" *ngIf="currentStatus === STATUS_FAILED">
+      <h2>Uploaded failed.</h2>
+      <p>
+        <a href="javascript:void(0)" (click)="reset()">Try again</a>
+      </p>
+      <pre>{{ uploadError | json }}</pre>
+    </div>
+  </div>
 </div>
 
 
